--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div th:include="fragment::navbar"></div>
-<div class="container margin-top50">
+<div class="container padding-top50 bg-white">
     <div class="text-center">
         <h4 th:text="${form.title}"></h4>
     </div>
