--- a/src/main/resources/templates/article/userList.html
+++ b/src/main/resources/templates/article/userList.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container" ng-controller="articleController">
     <div class="card" ng-repeat="article in articles track by $index">
-        <div class="card-block" ng-mouseenter="showRemoveBtn($event)" ng-mouseleave="hideRemoveBtn($event)">
+        <div class="article card-block bg-white shadow2" ng-mouseenter="showRemoveBtn($event)" ng-mouseleave="hideRemoveBtn($event)">
             <div class="pull-left">
                 <a ng-href="/article/update/{{article.id}}"><img ng-if="article.coverImg!=null" ng-src="{{article.coverImg}}" class="width80 height80">
                 </a>
@@ -21,11 +21,11 @@
             <div class="pull-left padding10">
                <div class="height50">
                    <a ng-href="/article/update/{{article.id}}"><h3 ng-bind="article.title"></h3>
-                    <p ng-bind="article.summarize"></p>
+                    <p class="text-muted" ng-bind="article.summarize"></p>
                    </a>
                 </div>
                 <div class="height10">
-                    <small class="text-muted">{{article.createdTime | date:'yyyy-MM-dd HH:mm'}}</small>
+                    <small class="text-muted">{{article.createdTime | date:'yyyy/MM/dd HH:mm'}}</small>
                     <i class="fa fa-trash-o text-muted remove margin-left10" ng-click="removeArticle($index,article.id)"></i>
                 </div>
             </div>
@@ -34,4 +34,17 @@
     </div>
 </div>
 </body>
+<script type="text/javascript">
+    $(function(){
+        var colors = ['#bd8c7d','#d1bfa7','#3a4660','#c9af98','#c9af98','#ed8a63','#845007','#21A8A3'];
+        function changeColor() {
+            $('.article.card-block').each(function (i,element) {
+                var index = parseInt(Math.random()*8);
+                var shadow = '-0.3em 0em'+ colors[index] + ' inset';
+                $(element).css('box-shadow',shadow);
+            });
+        }
+        changeColor();
+    });
+</script>
 </html>
