--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/home">文章</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/story/list">故事</a>
+                    </li>
                 </ul>
             </div>
             <div class="dropdown col-md-3">
