--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <!--<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">-->
     <script type="text/javascript" src="/static/js/jquery-1.11.1.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
