--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -52,6 +52,7 @@
 .margin-left10{margin-left: 1em;}
 .margin-right20{margin-right: 2em;}
 .margin-right10{margin-right: 1em;}
+.margin-top5{margin-top: 0.5em;}
 .margin-top10{margin-top: 1em;}
 .margin-top40{margin-top: 4em;}
 .margin-top50{margin-top: 5em;}
