--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
             <div class="dropdown col-md-3">
-                <div th:if="${session.user == null}" style="padding-top: 0.5em;"><a href="/loginPage">登录/注册</a></div>
+                <div th:if="${session.user == null}" style="padding-top: 0.5em;"><a href="/loginPage">登录&nbsp;|&nbsp;注册</a></div>
                 <div id="userBlock" data-target="#" data-toggle="dropdown" th:if="${session.user != null}" style="padding-top: 0.5em;">
                     <a href=""><img th:src="${#strings.isEmpty(session.user.avatar)?'http://ocb2rlqpi.bkt.clouddn.com/avatar.jpg':session.user.avatar}" class="width20 height20 borderRadius50">
                         &nbsp;<span th:text="${session.user.name}"></span></a>
@@ -38,7 +38,7 @@
                 <div class="dropdown-menu" aria-labelledby="userBlock">
                     <a class="dropdown-item" href="/myHome#/article"><i class="fa fa-home"></i>&nbsp;&nbsp;我的主页</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> &nbsp;&nbsp;退出</a>
+                    <a class="dropdown-item" href="/logout"><span style="color: indianred;"> <i class="fa fa-power-off"></i></span> &nbsp;&nbsp;退出</a>
                 </div>
             </div>
         </div>
