--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -54,6 +54,7 @@
 .margin-right10{margin-right: 1em;}
 .margin-top5{margin-top: 0.5em;}
 .margin-top10{margin-top: 1em;}
+.margin-top20{margin-top: 2em;}
 .margin-top40{margin-top: 4em;}
 .margin-top50{margin-top: 5em;}
 .margin-bottom20{margin-bottom:2em;}
@@ -86,7 +87,7 @@
 .shadow2{box-shadow:0.2em 0.2em 0.5em #838383;}
 .shadow3{box-shadow:0.3em 0.3em 0.5em #838383;}
 .backArrow{font-size: 1.05em;font-weight: 300;}
-.inputLabel{border-left: solid red;padding-left: 0.5em;line-height: 1.6em;}
+.inputLabel{border-left: solid #a1bad0;padding-left: 0.5em;line-height: 1.6em;color: #f3e8d6;}
 .textGrey{color: grey;}
 .textBlack{color: black;}
 .borderNone{border: none;}
