--- a/src/main/resources/templates/myHome.html
+++ b/src/main/resources/templates/myHome.html
@@ -11,7 +11,7 @@
 <div th:include="fragment::navbar"></div>
 <div class="container" style="margin-top: 3.5em">
     <div class="col-md-4">
-        <div id="jquery-accordion-menu" style="min-width: 220px;box-shadow: 0 5px 10px #333;" class="jquery-accordion-menu mc">
+        <div id="jquery-accordion-menu" style="position:fixed;min-width: 10em;max-width:23em;box-shadow: 0 5px 10px #333;" class="jquery-accordion-menu mc">
             <ul id="demo-list">
                 <li><a href="#/article"><i class="fa fa-file-text"></i>我的文章 </a></li>
                 <li><a href="#/story"><i class="fa fa-glass"></i>我的故事 </a></li>
@@ -106,9 +106,57 @@
             });
         };
     }).controller('userController',function($scope,$http){
+        $scope.user = {};
+        $http.get('/myHome/userInfo').success(function(data) {
+            $scope.user = data.data;
+        });
 
+        $scope.updateUser = function () {
+            $http.post('/user/update', $scope.user).success(function (data) {
+                    Tooltip.handle(data);
+            });
+        };
+
+        var uploader = WebUploader.create({
+            auto: true,
+            server: '/qiniu/upload/avatar',
+            pick: '#avatar',
+            accept: {
+                title: 'Images',
+                extensions: 'gif,jpg,jpeg,bmp,png',
+                mimeTypes: 'image/gif,image/jpg,image/jpeg,image/bmp,image/png'
+            },
+            fileSingleSizeLimit: 2 * 1024 * 1024
+        });
+        uploader.on('uploadStart', function () {
+        });
+        uploader.on('uploadSuccess', function (file, response) {
+            if (response.code == 1) {
+                $scope.user.avatar = response.data;
+                $scope.$apply();
+            } else {
+                Tooltip.fail(response.msg);
+            }
+        });
+        uploader.on('error', function (type) {
+            if ("F_EXCEED_SIZE" == type) {
+                Tooltip.fail('图片大小不能超过2M');
+            } else {
+                Tooltip.fail('图片格式不正确');
+            }
+        });
     }).controller('passwordController',function($scope,$http){
-
+        $scope.oldPassword = '';
+        $scope.newPassword = '';
+        $scope.confirmPassword = '';
+        $scope.updatePassword = function(){
+            $http.get('/user/update/password/'+[[${session.user.id}]],{params:{
+                oldPassword:$scope.oldPassword,
+                newPassword:$scope.newPassword
+            }}).success(function(data) {
+                Tooltip.handle(data);
+            });
+        };
     });
     myHome.config(function($routeProvider,$locationProvider){
         $routeProvider.when('/article',{
@@ -118,10 +166,10 @@
             templateUrl:'../templates/story/userList.html',
             controller:'storyController'
         }).when('/user',{
-            templateUrl:'../templates/user/userList.html',
+            templateUrl:'../templates/user/info.html',
             controller:'userController'
         }).when('/password',{
-            templateUrl:'../templates/password/userList.html',
+            templateUrl:'../templates/user/password.html',
             controller:'passwordController'
         }).otherwise({
             redirectTo:''
